[package]
name = "tower-actor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A `tower` middleware that creates a `Service` by passing messages to an actor."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4"
tokio = { version = "1.22", features = ["full", "tracing"] }
tracing = "0.1"
tokio-util = "0.7"
futures = "0.3"
pin-project = "1.0.12"
thiserror = "1.0.40"
