[package]
name = "tower-actor"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A `tower` middleware that creates a `Service` by passing messages to an actor."
authors = ["Mikayla Maki <mikayla.c.maki@gmail.com>", "Henry de Valence <hdevalence@hdevalence.ca>"]
homepage = "https://github.com/penumbra-zone/tower-actor"
repository = "https://github.com/penumbra-zone/tower-actor"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(fuzzing)'] }

[dependencies]
tower = "0.5.2"
tokio = { version = "1.22", features = ["rt", "tracing"] }
tracing = "0.1"
tokio-util = "0.7"
futures = "0.3"
pin-project = "1.0.12"
thiserror = "1.0.40"
